components/o3-form/src/css/components/form-field.css
.o3-form-field {
	display: flex;
	flex-direction: column;
	font-family: var(--o3-font-family-metric);
	gap: var(--o3-spacing-3xs);

	&:where(fieldset) {
		margin: 0;
		padding: 0;
		border: 0;
	}

	.o3-form-field__label,
	.o3-form-field__title,
	.o3-form-field__legend {
		font-size: var(--o3-font-size-metric2-negative-1);
		line-height: var(--o3-font-lineheight-metric2-negative-1);
		font-weight: var(--o3-font-weight-medium);
		color: var(--o3-color-use-case-body-text);

		&.o3-form-field--optional::after {
			content: '(optional)';
			margin-left: var(--o3-spacing-3xs);
			color: var(--o3-color-use-case-muted-text);
			font-weight: var(--o3-font-weight-regular);
		}
	}

	.o3-form-field__legend {
		padding: 0 0 var(--o3-spacing-5xs) 0;
	}

	.o3-form-input__description {
		font-size: var(--o3-font-size-metric2-negative-1);
		line-height: var(--o3-font-lineheight-metric2-negative-1);
		font-weight: var(--o3-font-weight-regular);
		color: var(--o3-color-palette-black-60);
	}

	.o3-form-field__label + .o3-form-input__description,
	.o3-form-field__title + .o3-form-input__description {
		margin-top: calc(-1 * var(--o3-spacing-4xs));
	}
}

.o3-form-field__feedback--error {
	color: var(--o3-color-use-case-error);
	font-size: var(--o3-font-size-metric2-negative-1);
}

